<resources>
    <string name="app_name">ELCAppAndroid</string>
    <string name="login_screen_title">ELC Auto Attendance</string>
    <string name="email_hint_text">Email Address</string>
    <string name="password_hint_text">Password</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="forgot_password_label">Forgot your password?</string>
    <string name="attendance">Attendance</string>
    <string name="uploaded_files">Uploaded Files</string>
    <string name="Firebase_url">https://rollcall-401.firebaseio.com/</string>
</resources>
