<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="webb.jerry.elcappandroid.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/elc_background"
    android:baselineAligned="false">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/login_screen_title"
        android:id="@+id/titleTextView"
        android:textSize="@dimen/text_large_size"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_weight=".8" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".2"
        android:visibility="gone">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint_text"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_medium_size" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password_hint_text"
            android:textSize="@dimen/text_medium_size"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_label"
            android:id="@+id/forgotPasswordButton"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@color/white" />

        <Button
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:id="@+id/loginButton"
            android:layout_gravity="center_horizontal"
            android:background="@color/teal"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:theme="@style/Base.Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:id="@+id/registerButton"
            android:layout_gravity="center_horizontal"
            android:background="@color/teal"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:theme="@style/Base.Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_weight=".2"
        android:visibility="visible">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            android:hint="First Name"
            android:textColorHint="@color/white"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            android:hint="Last Name"
            android:textColorHint="@color/white"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint_text"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_medium_size"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_gravity="center_horizontal"
            android:hint="University ID"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_medium_size"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText5"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password_hint_text"
            android:textSize="@dimen/text_medium_size"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText6"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Confirm Password"
            android:textSize="@dimen/text_medium_size"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".148" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".148" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Create Account"
                android:id="@+id/button"
                android:layout_weight=".5"
                android:background="@color/teal"
                android:textColor="@color/white"
                android:layout_marginRight="4dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:id="@+id/button2"
                android:layout_weight=".5"
                android:background="@color/teal"
                android:textColor="@color/white"
                android:layout_marginLeft="4dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
