<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/elc_background"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="79dp"
        android:text="@string/login_screen_title"
        android:id="@+id/titleTextView"
        android:textSize="@dimen/text_large_size"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student"
            android:id="@+id/radioButton"
            android:layout_weight=".5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Instructor"
            android:id="@+id/radioButton2"
            android:layout_weight=".5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_weight=".4">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstNameEditText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            android:hint="First Name"
            android:textColorHint="@color/white"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastNameEditText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            android:hint="Last Name"
            android:textColorHint="@color/white"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint_text"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_medium_size"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/universityIDEditText"
            android:layout_gravity="center_horizontal"
            android:hint="University ID"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_medium_size"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passEditText"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password_hint_text"
            android:textSize="@dimen/text_medium_size"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".148" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPassEditText2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Confirm Password"
            android:textSize="@dimen/text_medium_size"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".148" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".148">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Create Account"
                android:id="@+id/createAccountbutton"
                android:layout_weight=".5"
                android:background="@color/teal"
                android:textColor="@color/white"
                android:layout_marginRight="4dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:id="@+id/clearButton"
                android:layout_weight=".5"
                android:background="@color/teal"
                android:textColor="@color/white"
                android:layout_marginLeft="4dp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="right"
        android:layout_weight=".2" />
</LinearLayout>